add new folder for map
added an extra folder to store the map files

--- a/STI ONN.csproj
+++ b/STI ONN.csproj
@@ -19,4 +19,8 @@
     <Resource Include="STI-model.jpg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="assets\Maps\" />
+  </ItemGroup>
+
 </Project>
