added new function
pwede na mag zoom and drag the image sa left and right may timer na din yung building window na pag walang nagiinteract ng ilang mins babalik sa main window

--- a/STI ONN.csproj
+++ b/STI ONN.csproj
@@ -10,15 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="assets\back.png" />
+    <None Remove="assets\Maps\untitled.png" />
     <None Remove="STI ONN Logo transparent 3.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="assets\back.png" />
+    <Resource Include="assets\Maps\untitled.png" />
     <Resource Include="assets\STI ONN Logo transparent 3.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="assets\Maps\" />
   </ItemGroup>
 
 </Project>
