new update lahat nagana na yung buttons

--- a/STI ONN.csproj
+++ b/STI ONN.csproj
@@ -25,7 +25,9 @@
     <None Remove="assets\Maps\4thFloor.png" />
     <None Remove="assets\Maps\ground.png" />
     <None Remove="assets\Maps\Ground3d.png" />
+    <None Remove="assets\Maps\Mezzanine.png" />
     <None Remove="assets\Maps\Roofdeck.png" />
+    <None Remove="assets\Maps\Roofdeck5th.png" />
     <None Remove="assets\zoom-in.png" />
     <None Remove="assets\zoom-out.png" />
     <None Remove="assets\zoom-reset.png" />
@@ -49,7 +51,8 @@
     <Resource Include="assets\Maps\3rdFloor.png" />
     <Resource Include="assets\Maps\4thFloor.png" />
     <Resource Include="assets\Maps\Ground3d.png" />
-    <Resource Include="assets\Maps\Roofdeck.png" />
+    <Resource Include="assets\Maps\Mezzanine.png" />
+    <Resource Include="assets\Maps\Roofdeck5th.png" />
     <Resource Include="assets\STI ONN Logo transparent 3.png" />
     <Resource Include="assets\Icons\zoom-in.png" />
     <Resource Include="assets\Icons\zoom-out.png" />
