--- a/STI_ONN.csproj
+++ b/STI_ONN.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>STI_ONN</RootNamespace>
-    <Nullable>enable</Nullable>
+	  <RootNamespace>STI_ONN</RootNamespace>
+	  <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	  <PackageId>STI_ONN</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -73,9 +75,8 @@
     <PackageReference Include="ClosedXML" Version="0.104.1" />
     <PackageReference Include="EPPlus" Version="7.4.2" />
     <PackageReference Include="Firebase.DotNet.Storage" Version="1.0.3" />
-    <PackageReference Include="FirebaseAdmin" Version="3.0.1" />
+    <PackageReference Include="FirebaseAdmin" Version="3.1.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
-    <PackageReference Include="FirebaseNetAdmin" Version="1.0.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
     <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
